# primera-leccion

./: CMakeLists.txt
leccion-1/: CMakeLists.txt
leccion-1/include/: main.h
leccion-1/src/: main.cpp
leccion-2/: CMakeLists.txt
leccion-2/include/: main.h
leccion-2/src/: main.cpp
leccion-3/: CMakeLists.txt
leccion-3/include/: biblioteca.h
leccion-3/src/: biblioteca.cpp  main.cpp
leccion-4/: CMakeLists.txt
leccion-4/include/: biblioteca.h
leccion-4/src/: biblioteca.cpp  main.cpp
leccion-5/: CMakeLists.txt
leccion-5/include/: biblioteca.h  biblioteca5b.h  main.h
leccion-5/src/: biblioteca.cpp  biblioteca5b.cpp  main.cpp
leccion-6/: CMakeLists.txt
leccion-6/include/: biblioteca.h  main.h
leccion-6/src/: biblioteca.cpp  main.cpp
leccion-7/: CMakeLists.txt
leccion-7/include/: biblioteca.h  main.h
leccion-7/src/: biblioteca.cpp  main.cpp
